# fcsrv

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh
.github/workflows/: ci.yml  release.yml
examples/: 3d_rollball_animals.rs  shadows.rs  test.rs
src/: daemon.rs  homedir.rs  lib.rs  main.rs  update.rs
src/model/: base.rs  coordinatesmatch.rs  hopscotch_highsec.rs  image_processing.rs  m3d_rollball_objects.rs  mod.rs  penguin.rs  shadows.rs  train_coordinates.rs
src/serve/: mod.rs  task.rs
