[package]
name = "fcsrv"
version = "0.1.6"
edition = "2021"
description = "Funcaptcha solver server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
daemonize = "0.5.0"
image = "0.24.8"
ndarray = "0.15.6"
ort = "2.0.0-alpha.4"
rayon = "1.8.1"
serde_json = "1.0.111"
sha2 = "0.10.8"
clap = { version = "4.4.18", features = ["derive", "env"] }
self_update = { version = "0.39.0", default-features = false, features = ["rustls", "archive-tar", "compression-flate2"]  }
reqwest = { version = "0.11.23", default-features = false, features = ["blocking", "rustls"] }
tokio = { version = "1.35.1", features = ["full"] }
warp = { version = "0.3.6", features = ["tls"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.195", features = ["derive"] }
base64 = "0.21.7"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.48.0"
default-features = false
features = ["Win32_System_Com_CallObj", "Win32_Foundation", "Win32_Globalization", "Win32_UI_Shell_Common"]

[target.'cfg(target_os = "linux")'.dependencies]
sysctl = "0.5.5"

[target.'cfg(target_family = "unix")'.dependencies]
daemonize = "0.5.0"
nix = { version = "0.27.1", features = ["user", "signal"]}

# allocator
tcmalloc = { version = "0.3.0", optional = true }
snmalloc-rs = { version = "0.3.4", optional = true }
rpmalloc = { version = "0.2.2", optional = true }
jemallocator = { package = "tikv-jemallocator", version = "0.5.4", optional = true }
mimalloc = { version = "0.1.39", default-features = false, optional = true }

[features]
default = []
# Enable jemalloc for binaries
jemalloc = ["jemallocator"]
# Enable bundled tcmalloc
tcmalloc = ["tcmalloc/bundled"]
# Enable snmalloc for binaries
snmalloc = ["snmalloc-rs"]
# Enable bundled rpmalloc
rpmalloc = ["dep:rpmalloc"]
# Enable mimalloc for binaries
mimalloc = ["dep:mimalloc"]


[profile.release]
lto = true
opt-level = 's'
codegen-units = 1
strip = true
panic = "abort"
